@@ -43,24 +43,24 @@ import hudson.security.ACLContext;
 import hudson.security.AccessControlled;
 import hudson.util.AlternativeUiTextProvider;
 import hudson.util.AlternativeUiTextProvider.Message;
-import hudson.util.AtomicFileWriter;
 import hudson.util.FormValidation;
-import hudson.util.IOUtils;
 import hudson.util.Secret;
+import hudson.util.XStream2;
+import hudson.widgets.Widget;
 import io.jenkins.servlet.ServletExceptionWrapper;
 import jakarta.servlet.ServletException;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.nio.charset.Charset;
-import java.nio.file.Files;
+import java.io.StringReader;
+import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 import javax.xml.transform.Source;
 import javax.xml.transform.TransformerException;
 import javax.xml.transform.sax.SAXSource;
@@ -70,7 +70,8 @@ import jenkins.model.DirectlyModifiableTopLevelItemGroup;
 import jenkins.model.Jenkins;
 import jenkins.model.Loadable;
 import jenkins.model.queue.ItemDeletion;
-import jenkins.security.NotReallyRoleSensitiveCallable;
+import jenkins.security.ExtendedReadRedaction;
+import jenkins.security.XStreamNotDeserializable;
 import jenkins.security.stapler.StaplerNotDispatchable;
 import jenkins.util.SystemProperties;
 import jenkins.util.xml.XMLUtils;
@@ -114,6 +115,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
     /**
      * Project name.
      */
+    @XStreamNotDeserializable
     protected /*final*/ transient String name;
 
     /**
@@ -121,6 +123,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
      */
     protected volatile String description;
 
+    @XStreamNotDeserializable
     private transient ItemGroup parent;
 
     protected String displayName;
@@ -130,6 +133,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
         doSetName(name);
     }
 
+    @NonNull
     @Override
     @Exported(visibility = 999)
     public String getName() {
@@ -434,7 +438,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
                             Util.deleteRecursive(oldRoot);
                         } catch (IOException e) {
                             // but ignore the error, since we expect that
-                            e.printStackTrace();
+                            LOGGER.log(Level.WARNING, "Ignoring IOException while deleting", e);
                         }
                     }
 
@@ -471,6 +475,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
     @Override
     public abstract Collection<? extends Job> getAllJobs();
 
+    @NonNull
     @Override
     @Exported
     public final String getFullName() {
@@ -546,7 +551,11 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
             }
             List<Ancestor> ancestors = req.getAncestors();
             if (!ancestors.isEmpty()) {
-                Ancestor last = ancestors.get(ancestors.size() - 1);
+                Ancestor last = ancestors.getLast();
+                if (last.getObject() instanceof Widget) {
+                    // likely loaded via ajax so get the previous one which should be the view
+                    last = last.getPrev();
+                }
                 if (last.getObject() instanceof View view) {
                     if (view.getOwner().getItemGroup() == getParent() && !view.isDefault()) {
                         // Showing something inside a view, so should use that as the base URL.
@@ -815,6 +824,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
                 ItemDeletion.deregister(this);
             }
         }
+        SaveableListener.fireOnDeleted(this, getConfigFile());
         getParent().onDeleted(AbstractItem.this);
         Jenkins.get().rebuildDependencyGraphAsync();
     }
@@ -870,11 +880,11 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
         rsp.sendError(SC_BAD_REQUEST);
     }
 
-    static final Pattern SECRET_PATTERN = Pattern.compile(">(" + Secret.ENCRYPTED_VALUE_PATTERN + ")<");
     /**
      * Writes {@code config.xml} to the specified output stream.
      * The user must have at least {@link #EXTENDED_READ}.
-     * If he lacks {@link #CONFIGURE}, then any {@link Secret}s detected will be masked out.
+     * If he lacks {@link #CONFIGURE}, then any {@link Secret}s or other sensitive information detected will be masked out.
+     * @see jenkins.security.ExtendedReadRedaction
      */
 
     @Restricted(NoExternalUse.class)
@@ -882,19 +892,20 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
         checkPermission(EXTENDED_READ);
         XmlFile configFile = getConfigFile();
         if (hasPermission(CONFIGURE)) {
-            IOUtils.copy(configFile.getFile(), os);
+            Items.XSTREAM2.toXMLUTF8(this, os);
         } else {
+            var baos = new ByteArrayOutputStream();
+            Items.XSTREAM2.toXMLUTF8(this, baos);
+            String xml = baos.toString(StandardCharsets.UTF_8);
+
             String encoding = configFile.sniffEncoding();
-            String xml = Files.readString(Util.fileToPath(configFile.getFile()), Charset.forName(encoding));
-            Matcher matcher = SECRET_PATTERN.matcher(xml);
-            StringBuilder cleanXml = new StringBuilder();
-            while (matcher.find()) {
-                if (Secret.decrypt(matcher.group(1)) != null) {
-                    matcher.appendReplacement(cleanXml, ">********<");
-                }
+
+            for (ExtendedReadRedaction redaction : ExtendedReadRedaction.all()) {
+                LOGGER.log(Level.FINE, () -> "Applying redaction " + redaction.getClass().getName());
+                xml = redaction.apply(xml);
             }
-            matcher.appendTail(cleanXml);
-            org.apache.commons.io.IOUtils.write(cleanXml.toString(), os, encoding);
+
+            org.apache.commons.io.IOUtils.write(xml, os, encoding);
         }
     }
 
@@ -914,42 +925,33 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
      *               sources may not be handled.
      * @since 1.473
      */
+    @SuppressWarnings("unchecked")
     public void updateByXml(Source source) throws IOException {
         checkPermission(CONFIGURE);
         XmlFile configXmlFile = getConfigFile();
-        final AtomicFileWriter out = new AtomicFileWriter(configXmlFile.getFile());
+        final StringWriter out = new StringWriter();
         try {
-            try {
-                XMLUtils.safeTransform(source, new StreamResult(out));
-                out.close();
-            } catch (TransformerException | SAXException e) {
-                throw new IOException("Failed to persist config.xml", e);
-            }
-
-            // try to reflect the changes by reloading
-            Object o = new XmlFile(Items.XSTREAM, out.getTemporaryPath().toFile()).unmarshalNullingOut(this);
-            if (o != this) {
-                // ensure that we've got the same job type. extending this code to support updating
-                // to different job type requires destroying & creating a new job type
-                throw new IOException("Expecting " + this.getClass() + " but got " + o.getClass() + " instead");
-            }
-
-            Items.whileUpdatingByXml(new NotReallyRoleSensitiveCallable<Void, IOException>() {
-                @Override public Void call() throws IOException {
-                    onLoad(getParent(), getRootDir().getName());
-                    return null;
-                }
-            });
-            Jenkins.get().rebuildDependencyGraphAsync();
-
-            // if everything went well, commit this new version
-            out.commit();
-            SaveableListener.fireOnChange(this, getConfigFile());
-            ItemListener.fireOnUpdated(this);
-
-        } finally {
-            out.abort(); // don't leave anything behind
+            XMLUtils.safeTransform(source, new StreamResult(out));
+            out.close();
+        } catch (TransformerException | SAXException e) {
+            throw new IOException("Failed to process config.xml", e);
         }
+
+        // try to reflect the changes by reloading
+        Object o = Items.XSTREAM2.unmarshal(XStream2.getDefaultDriver().createReader(new StringReader(out.getBuffer().toString())), this, null, true);
+        if (o != this) {
+            // ensure that we've got the same job type. extending this code to support updating
+            // to different job type requires destroying & creating a new job type
+            throw new IOException("Expecting " + this.getClass() + " but got " + o.getClass() + " instead");
+        }
+
+        Items.runWhileUpdatingByXml(() -> onLoad(getParent(), getRootDir().getName()));
+        Jenkins.get().rebuildDependencyGraphAsync();
+
+        // if everything went well, re-serialize from memory to encrypt secrets submitted in plaintext
+        configXmlFile.write(this);
+        SaveableListener.fireOnChange(this, getConfigFile());
+        ItemListener.fireOnUpdated(this);
     }
 
     /**
@@ -967,18 +969,13 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
     }
 
     @Override
+    @SuppressWarnings("unchecked")
     public void load() throws IOException {
         checkPermission(CONFIGURE);
 
         // try to reflect the changes by reloading
         getConfigFile().unmarshal(this);
-        Items.whileUpdatingByXml(new NotReallyRoleSensitiveCallable<Void, IOException>() {
-            @Override
-            public Void call() throws IOException {
-                onLoad(getParent(), getParent().getItemName(getRootDir(), AbstractItem.this));
-                return null;
-            }
-        });
+        Items.runWhileUpdatingByXml(() -> onLoad(getParent(), getParent().getItemName(getRootDir(), this)));
         Jenkins.get().rebuildDependencyGraphAsync();
     }
 
